Added translation of MA 76, beginning of a proper names index, and other misc. corrections.

--- a/02_madhyama/01_First/01_Sevens/MA_001.md
+++ b/02_madhyama/01_First/01_Sevens/MA_001.md
@@ -89,11 +89,11 @@ It was then that the Bhagavān addressed the monks, “If a monk accomplishes se
 
 The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and handed it down.
 
-### Endnotes
+### Notes
 
 1. {:#n1} Parallels include AN 7.68, EA 39.1, T27, and T1536.437b18-c10. [\[back\]](#ref1)
 2. {:#n2} This is the traditional list of 12 types of sūtras found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (gāthā). Using the traditional Sanskrit interpretations of itivṛttaka, vyākaraṇa, and udāna as the primary clues, I arrive at this list: sūtra, geya, vyākaraṇa, gāthā, nidāna, itivṛttaka, avadāna, udāna, jātaka, vaipulya, adbhuta-dharma, and upadeśa. [\[back\]](#ref2)
-3. {:#n3} This passage is cryptic. A source that I have found that helps us interpret it is a parallel passage in Xuanzang’s **Saṃgītiparyāya Abhidharma** (T1536.437b24-26), which reads “this is a time he should cultivate calm appearances … active appearances … indifferent appearances.” Thus, these items seem to characterize a monk’s activities. [\[back\]](#ref3)
+3. {:#n3} This passage is cryptic. A source that I have found that helps us interpret it is a parallel passage in Xuanzang’s translation of the **Saṃgītiparyāya Abhidharma** (T1536.437b24-26), which reads “this is a time he should cultivate calm appearances … active appearances … indifferent appearances.” Thus, these items seem to characterize a monk’s activities. [\[back\]](#ref3)
 4. {:#n4} *Relieving himself*. The Chinese expression is a euphemism for defecating and urinating. [\[back\]](#ref4)
 5. {:#n5} *Aristocratic … brahmin … householder … mendicant*. The Skt. equivalents are kṣatriya, brāhmaṇa, gṛhapati, and śramaṇa. [\[back\]](#ref5)
 
