--- a/02_madhyama/01_First/01_Sevens/MA_002.md
+++ b/02_madhyama/01_First/01_Sevens/MA_002.md
@@ -52,7 +52,8 @@ It was then that the Bhagavān addressed the monks, “If the leaves of the Trā
 
 The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and handed it down.
 
-### Endnotes
+### Notes
+
 1. {:#n1} Parallels include AN 7.69, EA 39.2, and T28. [\[back\]](#ref1)
 2. {:#n2} *Trāyastriṃśa Heaven*. The Chinese translates trāyastriṃśa literally as Heaven of Thirty-Three. This was the heaven of the traditional vedic gods ruled by Indra.  
 *pārijāta*. The Chinese seems to be an abbreviated transliteration ‘jata,’ but presumably the full Sanskrit name would have been pārijāta(ka) (P. pāricchattaka). It's the present day name for *Nyctanthes arbor-tristis*, commonly called the night-flowering jasmine tree in English. The heavenly tree may have been imagined to resemble this South Asian tree, but it was described as being enormous in the Trāyastriṃśa Heaven, taking up the space of an entire grove. [\[back\]](#ref2)
