--- a/02_madhyama/01_First/01_Sevens/MA_003.md
+++ b/02_madhyama/01_First/01_Sevens/MA_003.md
@@ -94,7 +94,7 @@ It was then that the Bhagavān addressed the monks, “Suppose a king’s border
 
 The Buddha spoke thus. The monks who heard what the Buddha had taught rejoiced and handed it down.
 
-### Endnotes
+### Notes
 
 1. {:#n1} Parallels include AN 7.67 and EA 39.4. [\[Back\]](#ref1)
 2. {:#n2} *calabash beans, green grams, and lentils*. These are educated guesses based on glosses found in classical dictionaries and patterns of translation in other texts. Essentially, though, it appears to be a list of two or three common Indian legumes. [\[Back\]](#ref2)
