--- a/02_madhyama/01_First/01_Sevens/MA_007.md
+++ b/02_madhyama/01_First/01_Sevens/MA_007.md
@@ -6,17 +6,16 @@ base: ../../../
 previous: MA_006.html
 ---
 # [The Medium Discourses](../../index.html)
-## [Chapter 1: Sevens](index.html){:#nref1}
+## [Chapter 1: Sevens](index.html)
 ### 7. Worldly Merit
 
-Thus I have heard: One time, the Buddha traveled to Kauśāmbī and stayed at Ghoṣila Park.[\[1\]](#n1)
+Thus I have heard: One time, the Buddha traveled to Kauśāmbī and stayed at Ghoṣila Park.[\[1\]](#n1){:#ref1}
 
 At the time, the Venerable Mahācunda rose from his seat of repose late in the afternoon and went to visit the Buddha. When he arrived, he bowed and withdrew to sit at one side. He said, “Bhagavān, would it be possible to define worldly merit?”
 
 The Bhagavān told him, “It’s possible, Cunda. [428a] There are seven worldly merits that obtain great fortune, great rewards, great renown, and great virtue. What are the seven? Cunda, there are the faithful clansmen and clanswomen who give monasteries and meeting halls to the assembly of monks. This, Cunda, is the first worldly merit that obtains great fortune, great rewards, great renown, and great virtue.
-{: #nref2}
 
-“Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into monasteries and give them seats, carpets, blankets, mattresses, and bedding supplies.[\[2\]](#n2) This, Cunda, is the second worldly merit that obtains great fortune, great rewards, great renown, and great virtue.
+“Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into monasteries and give them seats, carpets, blankets, mattresses, and bedding supplies.[\[2\]](#n2){#:ref2} This, Cunda, is the second worldly merit that obtains great fortune, great rewards, great renown, and great virtue.
 
 “Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into monasteries and give everyone new, clean, and marvelous clothing. This, Cunda, is the third worldly merit that obtains great fortune, great rewards, great renown, and great virtue.
 
@@ -61,10 +60,10 @@ At that time, the Bhagavān spoke in verse:
 
 The Buddha spoke thus. The Venerable Mahācunda and the monks who heard what the Buddha had taught rejoiced and handed it down.
 
-### Endnotes
+### Notes
 
-1. {:#n1} *Ghoṣila Park*. P. ghositārāma. [\[back\]](#nref1)
-2. {:#n2} *carpets, blankets, mattresses*. The Chinese for these terms uses obscure classical expressions that were used for different things over the ages. I’ve translated them generally, but the items in the original text may have been more specific than this. [\[back\]](#nref2)
+1. {:#n1} *Ghoṣila Park*. P. ghositārāma. [\[back\]](#ref1)
+2. {:#n2} *carpets, blankets, mattresses*. The Chinese for these terms uses obscure classical expressions that were used for different things over the ages. I’ve translated them generally, but the items in the original text may have been more specific than this. [\[back\]](#ref2)
 
 ---
 
