--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_073.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_073.md
@@ -10,68 +10,88 @@ next: MA_074.html
 ## [Chapter 7: King Dīrghāyu](index.html)
 ### 73. The Gods
 
-Thus have I heard:  One time, the Buddha traveled to Cedi and stayed at Waterside Grove.
+1\. Thus have I heard:  One time, the Buddha traveled to Cedi and stayed at Waterside Grove.
+{: #p1}
 
 #### 1. Purifying Knowledge and Vision
 
-It was then that the Bhagavān addressed the monks, “Before I had awakened to the unsurpassed and true enlightenment, I had the thought, ‘I’d like to be able to produce their light. As a result of their light, I’ll see shapes and forms. Thus, my knowledge and vision will be fully and radiantly purified.’
+2\. It was then that the Bhagavān addressed the monks, “Before I had awakened to the unsurpassed and true enlightenment, I had the thought, ‘I’d like to be able to produce their light. As a result of their light, I’ll see shapes and forms. Thus, my knowledge and vision will be fully and radiantly purified.’
+{: #p2}
 
-“In order for knowledge and vision to be fully and radiantly purified, I dwelled alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of dwelling alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. That was before I had met with those gods, before we exchanged greetings, before any conversation, and before any reply.
+3\. “In order for knowledge and vision to be fully and radiantly purified, I lived alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. That was before I had met with those gods, before we exchanged greetings, before any conversation, and before any reply.
+{: #p3}
 
 #### 2. Meeting and Conversing with Gods
 
-“Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll also meet with those gods, exchange greetings, and have some conversation and some replies. Thus, my knowledge and vision will be fully and radiantly purified.’
+4\. “Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll also meet with those gods, exchange greetings, and have some conversation and some replies. Thus, my knowledge and vision will be fully and radiantly purified.’
+{: #p4}
 
-“In order for knowledge and vision to be fully and radiantly purified, I dwelled alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of dwelling alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I also met with those gods, exchanged greetings, and had some conversation and some replies. Still, I didn’t know of those gods their clans, their names, or their births.
+5\. “In order for knowledge and vision to be fully and radiantly purified, I lived alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I also met with those gods, exchanged greetings, and had some conversation and some replies. Still, I didn’t know of those gods their clans, their names, or their births.
+{: #p5}
 
 #### 3. The Names and Births of Gods
 
-“Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll also know of those gods their clans, their names, and their births. Thus, my knowledge and vision will be fully and radiantly purified.’
+6\. “Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll also know of those gods their clans, their names, and their births. Thus, my knowledge and vision will be fully and radiantly purified.’
+{: #p6}
 
-“In order for knowledge and vision to be fully and radiantly purified, I dwelled alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of dwelling alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I also knew of those gods their clans, their names, and their births. Still, I didn’t know of those gods their food or the pains and pleasures they experience.
+7\. “In order for knowledge and vision to be fully and radiantly purified, I lived alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I also knew of those gods their clans, their names, and their births. Still, I didn’t know of those gods their food or the pains and pleasures they experience.
+{: #p7}
 
 #### 4. The Food and Experiences of Gods
 
-“Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll know of those gods their clans, their names, and their births. I’ll also know of those gods their food and the pains and pleasures they experience. Thus, my knowledge and vision will be fully and radiantly purified.’
+8\. “Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll know of those gods their clans, their names, and their births. I’ll also know of those gods their food and the pains and pleasures they experience. Thus, my knowledge and vision will be fully and radiantly purified.’
+{: #p8}
 
-“In order for knowledge and vision to be fully and radiantly purified, I dwelled alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of dwelling alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their clans, their names, and their births. I also knew of those gods their food and the pains and pleasures they experienced. Still, I didn’t know of those gods their life spans, their duration, or the end of their lives.
+9\. “In order for knowledge and vision to be fully and radiantly purified, I lived alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their clans, their names, and their births. I also knew of those gods their food and the pains and pleasures they experienced. Still, I didn’t know of those gods their life spans, their duration, or the end of their lives.
+{: #p9}
 
 #### 5. The Life Spans of Gods
 
-“Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll know of those gods their clans, their names, and their births. I’ll know of those gods their food and the pains and pleasures they experience. I’ll also know of those gods their life spans, their durations, and the end of their lives. Thus, my knowledge and vision will be fully and radiantly purified.’
+10\. “Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll know of those gods their clans, their names, and their births. I’ll know of those gods their food and the pains and pleasures they experience. I’ll also know of those gods their life spans, their durations, and the end of their lives. Thus, my knowledge and vision will be fully and radiantly purified.’
+{: #p10}
 
-“In order for knowledge and vision to be fully and radiantly purified, I dwelled alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of dwelling alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their clans, their names, and their births. I knew of those gods their food and the pains and pleasures they experienced. I also knew of those gods their life spans, their duration, and the end of their lives. Still, I didn’t know of those gods what actions they had done to die and be born there.
+11\. “In order for knowledge and vision to be fully and radiantly purified, I lived alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their clans, their names, and their births. I knew of those gods their food and the pains and pleasures they experienced. I also knew of those gods their life spans, their duration, and the end of their lives. Still, I didn’t know of those gods what actions they had done to die and be born there.
+{: #p11}
 
 #### 6. Actions That Lead to Birth in the Heavens
 
-“Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll know of those gods their clans, their names, and their births. I’ll know of those gods their food and the pains and pleasures they experience. I’ll know of those gods their life spans, their durations, and the end of their lives. I’ll also know of those gods what actions they had done to die and be born there. Thus, my knowledge and vision will be fully and radiantly purified.’
+12\. “Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll know of those gods their clans, their names, and their births. I’ll know of those gods their food and the pains and pleasures they experience. I’ll know of those gods their life spans, their durations, and the end of their lives. I’ll also know of those gods what actions they had done to die and be born there. Thus, my knowledge and vision will be fully and radiantly purified.’
+{: #p12}
 
-“In order for knowledge and vision to be fully and radiantly purified, I dwelled alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of dwelling alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their clans, their names, and their births. I knew of those gods their food and the pains and pleasures they experienced. I knew of those gods their life spans, their duration, and the end of their lives. I also knew of those gods what actions they had done to die and be born there. Still, I didn’t know in what heavens those gods were.
+13\. “In order for knowledge and vision to be fully and radiantly purified, I lived alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their clans, their names, and their births. I knew of those gods their food and the pains and pleasures they experienced. I knew of those gods their life spans, their duration, and the end of their lives. I also knew of those gods what actions they had done to die and be born there. Still, I didn’t know in what heavens those gods were.
+{: #p13}
 
 #### 7. The Heavens Where Gods Are Born
 
-“Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll know of those gods their clans, their names, and their births. I’ll know of those gods their food and the pains and pleasures they experience. I’ll know of those gods their life spans, their durations, and the end of their lives. I’ll know of those gods what actions they had done to die and be born there I’ll also know in what heavens those gods are. Thus, my knowledge and vision will be fully and radiantly purified.’
+14\. “Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll know of those gods their clans, their names, and their births. I’ll know of those gods their food and the pains and pleasures they experience. I’ll know of those gods their life spans, their durations, and the end of their lives. I’ll know of those gods what actions they had done to die and be born there I’ll also know in what heavens those gods are. Thus, my knowledge and vision will be fully and radiantly purified.’
+{: #p14}
 
-“In order for knowledge and vision to be fully and radiantly purified, I dwelled alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of dwelling alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their clans, their names, and their births. I knew of those gods their food and the pains and pleasures they experienced. I knew of those gods their life spans, their duration, and the end of their lives. I knew of those gods what actions they had done to die and be born there. I also knew in what heavens those gods were. Still, I didn’t know whether I had previously been born or never been born in those heavens above.
+15\. “In order for knowledge and vision to be fully and radiantly purified, I lived alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their clans, their names, and their births. I knew of those gods their food and the pains and pleasures they experienced. I knew of those gods their life spans, their duration, and the end of their lives. I knew of those gods what actions they had done to die and be born there. I also knew in what heavens those gods were. Still, I didn’t know whether I had previously been born or never been born in those heavens above.
+{: #p15}
 
 #### 8. Previous Births in the Heavens
 
-“Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll know of those gods their clans, their names, and their births. I’ll know of those gods their food and the pains and pleasures they experience. I’ll know of those gods their life spans, their durations, and the end of their lives. I’ll know of those gods what actions they had done to die and be born there I’ll know in what heavens those gods are. I’ll also know whether I had previously been born or never been born in those heavens above. Thus, my knowledge and vision will be fully and radiantly purified.’
+16\. “Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll know of those gods their clans, their names, and their births. I’ll know of those gods their food and the pains and pleasures they experience. I’ll know of those gods their life spans, their durations, and the end of their lives. I’ll know of those gods what actions they had done to die and be born there I’ll know in what heavens those gods are. I’ll also know whether I had previously been born or never been born in those heavens above. Thus, my knowledge and vision will be fully and radiantly purified.’
+{: #p16}
 
-“In order for knowledge and vision to be fully and radiantly purified, I dwelled alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of dwelling alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their clans, their names, and their births. I knew of those gods their food and the pains and pleasures they experienced. I knew of those gods their life spans, their duration, and the end of their lives. I knew of those gods what actions they had done to die and be born there. I knew in what heavens those gods were. I also knew whether I had previously been born or never been born in those heavens above.
+17\. “In order for knowledge and vision to be fully and radiantly purified, I lived alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their clans, their names, and their births. I knew of those gods their food and the pains and pleasures they experienced. I knew of those gods their life spans, their duration, and the end of their lives. I knew of those gods what actions they had done to die and be born there. I knew in what heavens those gods were. I also knew whether I had previously been born or never been born in those heavens above.
+{: #p17}
 
 #### Conclusion
 
-“If I didn’t rightly know and apprehend these eight practices, then I couldn’t thoroughly declare their attainment. I wouldn’t know that I had awakened to the unsurpassed and true enlightenment, nor could I have gone beyond this world’s gods, Māra, Brahmā, mendicants, and brahmins. I wouldn’t have been liberated by various liberations. I wasn’t yet free from delusions. I also hadn’t yet ended birth, established the religious practice, accomplished the task, and stopped being subject to existence, knowing it as it really is.
+18\. “If I didn’t rightly know and apprehend these eight practices, then I couldn’t thoroughly declare their attainment. I wouldn’t know that I had awakened to the unsurpassed and true enlightenment, nor could I have gone beyond this world’s gods, Māra, Brahmā, mendicants, and brahmins. I wouldn’t have been liberated by various liberations. I wasn’t yet free from delusions. I also hadn’t yet ended birth, established the religious practice, accomplished the task, and stopped being subject to existence, knowing it as it really is.
+{: #p18}
 
-“If I rightly knew and attained these eight practices, then I could thoroughly declare their attainment. I knew I had awakened to the unsurpassed and true enlightenment. I had gone beyond this world’s gods, Māra, Brahmā, mendicants, and brahmins. I was liberated by various liberations. My mind was free of delusions. I also had ended birth, established the religious practice, accomplished the task, and was no longer subject to existence, knowing it as it really was.”
+19\. “If I rightly knew and attained these eight practices, then I could thoroughly declare their attainment. I knew I had awakened to the unsurpassed and true enlightenment. I had gone beyond this world’s gods, Māra, Brahmā, mendicants, and brahmins. I was liberated by various liberations. My mind was free of delusions. I also had ended birth, established the religious practice, accomplished the task, and was no longer subject to existence, knowing it as it really was.”
+{: #p19}
 
-The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and handed it down.
+20\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and handed it down.
+{: #p20}
 
 ---
 
 Translator: Charles Patton
 
-Last Revised: 28 February 2020
+Last Revised:5 March 2020
 
 ---
