--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_074.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_074.md
@@ -11,95 +11,127 @@ next: MA_075.html
 ## [Chapter 7: King Dīrghāyu](index.html)
 ### 74. Eight Thoughts
 
-Thus have I heard: One time, the Buddha traveled to Bharga and stayed at Mṛgadāva Park in Bhīṣaṇikā Grove of Śuśumāragiri.
+1\. Thus have I heard: One time, the Buddha traveled to Bharga and stayed at Mṛgadāva Park in Bhīṣaṇikā Grove of Śuśumāragiri.
+{: #p1}
 
 #### The Eight Thoughts of a Great Man
 
-It was then that Venerable Aniruddha was staying in Cedi at Waterside Grove. At that point, Venerable Aniruddha was staying in a peaceful place sitting in reflection. In his mind, he thought, “The path comes from having no desires; it’s not attained by having desires. The path comes from knowing what’s enough; it’s not obtained by lacking satisfaction. The path comes from seclusion; it’s not obtained by enjoying company, living with company, or joining with company. The path comes from diligence; it’s not obtained by indolence. The path comes from right mindfulness; it’s not obtained by wrong mindfulness. The path comes from a concentrated mind; it’s not obtained by a distracted mind. The path comes from wisdom; it’s not obtained by foolishness.”
+2\. It was then that Venerable Aniruddha was staying in Cedi at Waterside Grove. At that point, Venerable Aniruddha was staying in a peaceful place sitting in reflection. In his mind, he thought, “The path comes from having no desires; it’s not attained by having desires. The path comes from knowing what’s enough; it’s not obtained by lacking satisfaction. The path comes from seclusion; it’s not obtained by enjoying company, living with company, or joining with company. The path comes from diligence; it’s not obtained by indolence. The path comes from right mindfulness; it’s not obtained by wrong mindfulness. The path comes from a concentrated mind; it’s not obtained by a distracted mind. The path comes from wisdom; it’s not obtained by foolishness.”
+{: #p2}
 
-Thereupon, the Bhagavān knew that thought, that reflection, and that volition in Venerable Aniruddha’s mind using his knowledge of other minds. Knowing it, the Bhagavān then entered that form of concentration. With that form of concentration, the Bhagavān thus disappeared from Mṛgadāva Park in Bharga and appeared standing before Venerable Aniruddha in Cedi at Waterside Grove in the time it takes a strong man to flex his arm.
+3\. Thereupon, the Bhagavān knew that thought, that reflection, and that volition in Venerable Aniruddha’s mind using his knowledge of other minds. Knowing it, the Bhagavān then entered that form of concentration. With that form of concentration, the Bhagavān thus disappeared from Mṛgadāva Park in Bharga and appeared standing before Venerable Aniruddha in Cedi at Waterside Grove in the time it takes a strong man to flex his arm.
+{: #p3}
 
-The Bhagavān then awoke from that concentration and praised Venerable Aniruddha. “Good, Aniruddha, good! You were in a peaceful place sitting in reflection. In your mind, you thought, ‘The path comes from having no desires; it’s not attained by having desires. The path comes from knowing what’s enough; it’s not obtained by lacking satisfaction. The path comes from seclusion; it’s not obtained by enjoying company, living with company, or joining with company. The path comes from diligence; it’s not obtained by indolence. The path comes from right mindfulness; it’s not obtained by wrong mindfulness. The path comes from a concentrated mind; it’s not obtained by a distracted mind. The path comes from wisdom; it’s not obtained by foolishness.’
+4\. The Bhagavān then awoke from that concentration and praised Venerable Aniruddha. “Good, Aniruddha, good! You were in a peaceful place sitting in reflection. In your mind, you thought, ‘The path comes from having no desires; it’s not attained by having desires. The path comes from knowing what’s enough; it’s not obtained by lacking satisfaction. The path comes from seclusion; it’s not obtained by enjoying company, living with company, or joining with company. The path comes from diligence; it’s not obtained by indolence. The path comes from right mindfulness; it’s not obtained by wrong mindfulness. The path comes from a concentrated mind; it’s not obtained by a distracted mind. The path comes from wisdom; it’s not obtained by foolishness.’
+{: #p4}
 
-“Aniruddha, you could accept an additional eighth thought of a great man from the Tathāgata. Accepting it, reflect that the path comes from non-frivolity, enjoying non-frivolity, and practicing non-frivolity; it’s not obtained by frivolity, enjoying frivolity, or practicing frivolity. Aniruddha, if you accomplish these eight thoughts of a great man, you’ll surely be able to part with desire and part with bad and unwholesome things *up to* attain the accomplishment of the fourth meditation.
+5\. “Aniruddha, you could accept an additional eighth thought of a great man from the Tathāgata. Accepting it, reflect that the path comes from non-frivolity, enjoying non-frivolity, and practicing non-frivolity; it’s not obtained by frivolity, enjoying frivolity, or practicing frivolity. Aniruddha, if you accomplish these eight thoughts of a great man, you’ll surely be able to part with desire and part with bad and unwholesome things *up to* attain the accomplishment of the fourth meditation.
+{: #p5}
 
 #### Eight Similes about the Eight Thoughts
 
-“Aniruddha, if you accomplish these eight thoughts of a great man and also attain these four progressive mental states, dwell happily in the present life, and attain them easily and not with difficulty, you’ll be like a king or a king’s minister with a superb hamper full of various robes. Wishing to put them on during the morning, they choose and put them on. Wishing to put on clothes during the day and in the evening, they put them on, doing so freely as they like. Aniruddha, you’ll be likewise. Obtaining a discarded robe and considering it the best clothing. Your mind will be desireless practicing in this way.
+6\. “Aniruddha, if you accomplish these eight thoughts of a great man and also attain these four progressive mental states, dwell happily in the present life, and attain them easily and not with difficulty, you’ll be like a king or a king’s minister with a superb hamper full of various robes. Wishing to put them on during the morning, they choose and put them on. Wishing to put on clothes during the day and in the evening, they put them on, doing so freely as they like. Aniruddha, you’ll be likewise. Obtaining a discarded robe and considering it the best clothing. Your mind will be desireless practicing in this way.
+{: #p6}
 
-“Aniruddha, if you accomplish these eight thoughts of a great man and also attain these four progressive mental states, dwell happily in the present life, and attain them easily and not with difficulty, you’ll be like a king or a king’s minister with a superb kitchen with a variety of pure, sublime, and delicious dishes. Aniruddha, you’ll be likewise, always soliciting alms and considering it the best meal. Your mind will be desireless practicing in this way.
+7\. “Aniruddha, if you accomplish these eight thoughts of a great man and also attain these four progressive mental states, dwell happily in the present life, and attain them easily and not with difficulty, you’ll be like a king or a king’s minister with a superb kitchen with a variety of pure, sublime, and delicious dishes. Aniruddha, you’ll be likewise, always soliciting alms and considering it the best meal. Your mind will be desireless practicing in this way.
+{: #p7}
 
-“Aniruddha, if you accomplish these eight thoughts of a great man and also attain these four progressive mental states, dwell happily in the present life, and attain them easily and not with difficulty, you’ll be like a king or a king’s minister with a superb residence, mansion, or palace. Aniruddha, you’ll be likewise, stopping under a tree and considering it the best residence. Your mind will be desireless practicing in this way.
+8\. “Aniruddha, if you accomplish these eight thoughts of a great man and also attain these four progressive mental states, dwell happily in the present life, and attain them easily and not with difficulty, you’ll be like a king or a king’s minister with a superb residence, mansion, or palace. Aniruddha, you’ll be likewise, stopping under a tree and considering it the best residence. Your mind will be desireless practicing in this way.
+{: #p8}
 
-“Aniruddha, if you accomplish these eight thoughts of a great man and also attain these four progressive mental states, dwell happily in the present life, and attain them easily and not with difficulty, you’ll be like a king or a king’s minister with a superb seat, prepared with a wool carpet or blanket, covered by fine brocades or fine silk gauze, and with a fabric-covered pair of heads with comfortable cushions …  Aniruddha, you’ll be likewise, considering a seat of grass or leaves to be the best seat. Your mind will be desireless practicing in this way.
+9\. “Aniruddha, if you accomplish these eight thoughts of a great man and also attain these four progressive mental states, dwell happily in the present life, and attain them easily and not with difficulty, you’ll be like a king or a king’s minister with a superb seat, prepared with a wool carpet or blanket, covered by fine brocades or fine silk gauze, and with a fabric-covered pair of heads with comfortable cushions …  Aniruddha, you’ll be likewise, considering a seat of grass or leaves to be the best seat. Your mind will be desireless practicing in this way.
+{: #p9}
 
-“Aniruddha, if you accomplish these eight thoughts of a great man and also attain these four progressive mental states, dwell happily in the present life, and attain them easily and not with difficulty, then were you to travel east, you’d surely be happy and without any troubles. If you were to travel south, west, or north, you’d surely be happy without any troubles.
+10\. “Aniruddha, if you accomplish these eight thoughts of a great man and also attain these four progressive mental states, dwell happily in the present life, and attain them easily and not with difficulty, then were you to travel east, you’d surely be happy and without any troubles. If you were to travel south, west, or north, you’d surely be happy without any troubles.
+{: #p10}
 
-“Aniruddha, if you accomplish these eight thoughts of a great man and also attain these four progressive mental states, dwell happily in the present life, and attain them easily and not with difficulty, then even if I didn’t say you dwell in good things, how could I say you’d decline? You’ll simply develop good things day and night and not decline.
+11\. “Aniruddha, if you accomplish these eight thoughts of a great man and also attain these four progressive mental states, dwell happily in the present life, and attain them easily and not with difficulty, then even if I didn’t say you dwell in good things, how could I say you’d decline? You’ll simply develop good things day and night and not decline.
+{: #p11}
 
-“Aniruddha, if you accomplish these eight thoughts of a great man and also attain these four progressive mental states, dwell happily in the present life, and attain them easily and not with difficulty, you’ll surely obtain one of two fruits: Either you’ll attain ultimate knowledge in the present life, or you’ll become a non-returner with remainder.
+12\. “Aniruddha, if you accomplish these eight thoughts of a great man and also attain these four progressive mental states, dwell happily in the present life, and attain them easily and not with difficulty, you’ll surely obtain one of two fruits: Either you’ll attain ultimate knowledge in the present life, or you’ll become a non-returner with remainder.
+{: #p12}
 
-“Aniruddha, if you accomplish these eight thoughts of a great man and also attain these four progressive mental states, dwell happily in the present life, and attain them easily and not with difficulty, then afterwards you’ll spend the summer retreat in Cedi at Waterside Grove.”
+13\. “Aniruddha, if you accomplish these eight thoughts of a great man and also attain these four progressive mental states, dwell happily in the present life, and attain them easily and not with difficulty, then afterwards you’ll spend the summer retreat in Cedi at Waterside Grove.”
+{: #p13}
 
 #### The Buddha Explains the Eight Thoughts
 
-It was then that the Bhagavān taught Dharma for Venerable Aniruddha, encouraging, rousing, and making him rejoice. He taught the Dharma for him with measureless methods. Having encouraged, roused, and made him rejoice, he entered that form of concentration. With that form of concentration, the Bhagavān thus disappeared from the Waterside Grove in Cedi and appeared standing at Mṛgadāva Park in Bharga in the time it takes for a strong man to flex his arm.
+14\. It was then that the Bhagavān taught Dharma for Venerable Aniruddha, encouraging, rousing, and making him rejoice. He taught the Dharma for him with measureless methods. Having encouraged, roused, and made him rejoice, he entered that form of concentration. With that form of concentration, the Bhagavān thus disappeared from the Waterside Grove in Cedi and appeared standing at Mṛgadāva Park in Bharga in the time it takes for a strong man to flex his arm.
+{: #p14}
 
-At that moment, Venerable Ānanda was holding a fan and attending the Buddha. Thereupon, the Bhagavān woke from concentration, turned to him, and said, “Ānanda, if there are monks traveling to Mṛgadāva Park in Bharga, send them all to assemble at the discussion hall. After they’ve assembled at the discussion hall, come back and tell me.”
-Accepting the Bhagavān’s instruction, Venerable Ānanda bowed his head at his feet and then went to announce the order: “Any monks traveling to Mṛgadāva Park in Bharga are all to assemble at the discussion hall.”
+15\. At that moment, Venerable Ānanda was holding a fan and attending the Buddha. Thereupon, the Bhagavān woke from concentration, turned to him, and said, “Ānanda, if there are monks traveling to Mṛgadāva Park in Bharga, send them all to assemble at the discussion hall. After they’ve assembled at the discussion hall, come back and tell me.”
+{: #p15}
 
-Once they had assembled at the discussion hall, he came back to the Buddha, bowed his head at his feet, and withdrew to sit to one side. He said, “Bhagavān, any monks who’ve traveled to Mṛgadāva Park in Bharga all have been sent to assembly at the discussion hall. May the Bhagavān know the time is right.”
+16\. Accepting the Bhagavān’s instruction, Venerable Ānanda bowed his head at his feet and then went to announce the order: “Any monks traveling to Mṛgadāva Park in Bharga are all to assemble at the discussion hall.”
+{: #p16}
 
-Thereupon, the Bhagavān led Venerable Ānanda to the discussion hall. He prepared a seat in front of the assembled monks and sat down. After sitting, he addressed them, “Monks, now I will explain the eight thoughts of a great man for you. All of you, listen closely, and well consider it.” The monks then accepted the teaching and listened.
+17\. Once they had assembled at the discussion hall, he came back to the Buddha, bowed his head at his feet, and withdrew to sit to one side. He said, “Bhagavān, any monks who’ve traveled to Mṛgadāva Park in Bharga all have been sent to assembly at the discussion hall. May the Bhagavān know the time is right.”
+{: #p17}
 
-The Buddha said, “The eight thoughts of a great man are these: The path comes from having no desires; it’s not attained by having desires. The path comes from knowing what’s enough; it’s not obtained by lacking satisfaction. The path comes from seclusion; it’s not obtained by enjoying company, living with company, or joining with company. The path comes from diligence; it’s not obtained by indolence. The path comes from right mindfulness; it’s not obtained by wrong mindfulness. The path comes from a concentrated mind; it’s not obtained by a distracted mind. The path comes from wisdom; it’s not obtained by foolishness. The path comes from non-frivolity, enjoying non-frivolity, and practicing non-frivolity; it’s not obtained by frivolity, enjoying frivolity, or practicing frivolity.
+18\. Thereupon, the Bhagavān led Venerable Ānanda to the discussion hall. He prepared a seat in front of the assembled monks and sat down. After sitting, he addressed them, “Monks, now I will explain the eight thoughts of a great man for you. All of you, listen closely, and well consider it.” The monks then accepted the teaching and listened.
+{: #p18}
 
-“How does the path come from having no desires and isn’t obtained by having desires? A monk attains the lack of desires, knowing himself to have attained the lack of desires, and doesn’t let other people know ‘I have no desires.’ He attains knowing what’s enough, seclusion, diligence, right mindfulness, a concentrated mind, wisdom, and non-frivolity. He knows that he has attained non-frivolity, and he doesn’t want to let other people know ‘I have no frivolity.’ This is how the path comes from having no desires and isn’t obtained by having desires.
+19\. The Buddha said, “The eight thoughts of a great man are these: The path comes from having no desires; it’s not attained by having desires. The path comes from knowing what’s enough; it’s not obtained by lacking satisfaction. The path comes from seclusion; it’s not obtained by enjoying company, living with company, or joining with company. The path comes from diligence; it’s not obtained by indolence. The path comes from right mindfulness; it’s not obtained by wrong mindfulness. The path comes from a concentrated mind; it’s not obtained by a distracted mind. The path comes from wisdom; it’s not obtained by foolishness. The path comes from non-frivolity, enjoying non-frivolity, and practicing non-frivolity; it’s not obtained by frivolity, enjoying frivolity, or practicing frivolity.
+{: #p19}
 
-“How does the path come from knowing what’s enough and isn’t obtained by the lack of satisfaction? A monk practices knowing what’s enough. He takes clothes to cover his body and takes food to nourish his body. This is how the path comes from knowing what’s enough and not obtained by a lack of satisfaction.
+20\. “How does the path come from having no desires and isn’t obtained by having desires? A monk attains the lack of desires, knowing himself to have attained the lack of desires, and doesn’t let other people know ‘I have no desires.’ He attains knowing what’s enough, seclusion, diligence, right mindfulness, a concentrated mind, wisdom, and non-frivolity. He knows that he has attained non-frivolity, and he doesn’t want to let other people know ‘I have no frivolity.’ This is how the path comes from having no desires and isn’t obtained by having desires.
+{: #p20}
 
-“How does the path come from seclusion and isn’t obtained by enjoying company, living with company, or joining with company? A monk practices seclusion and accomplishes two seclusions: Both physical and mental seclusion. This is how the path comes from seclusion and isn’t obtained by enjoying company, living with company, or joining company.
+21\. “How does the path come from knowing what’s enough and isn’t obtained by the lack of satisfaction? A monk practices knowing what’s enough. He takes clothes to cover his body and takes food to nourish his body. This is how the path comes from knowing what’s enough and not obtained by a lack of satisfaction.
+{: #p21}
 
-“How does the path come from diligence and isn’t obtained by indolence? It means a monk always conducts himself with energy. He stops the bad and unwholesome and cultivates good things. He constantly motivates himself, focused and resolute, to make roots of goodness and not abandon the effort. This is how the path comes from diligence and isn’t obtained by indolence.
+22\. “How does the path come from seclusion and isn’t obtained by enjoying company, living with company, or joining with company? A monk practices seclusion and accomplishes two seclusions: Both physical and mental seclusion. This is how the path comes from seclusion and isn’t obtained by enjoying company, living with company, or joining company.
+{: #p22}
 
-“How does the path come from right mindfulness and isn’t obtained by wrong mindfulness? A monk contemplates his inner body as body and contemplates his inner feelings, mind, and mental objects as mental objects. This is how the path comes from right mindfulness and isn’t obtained by wrong mindfulness.
+23\. “How does the path come from diligence and isn’t obtained by indolence? It means a monk always conducts himself with energy. He stops the bad and unwholesome and cultivates good things. He constantly motivates himself, focused and resolute, to make roots of goodness and not abandon the effort. This is how the path comes from diligence and isn’t obtained by indolence.
+{: #p23}
 
-“How does the path come from a concentrated mind and isn’t obtained by a distracted mind? A monk parts with desire and parts with bad and unwholesome things *up to* attains the accomplishment of the fourth meditation. This is how the path comes from a concentrated mind and isn’t obtained by a distracted mind.
+24\. “How does the path come from right mindfulness and isn’t obtained by wrong mindfulness? A monk contemplates his inner body as body and contemplates his inner feelings, mind, and mental objects as mental objects. This is how the path comes from right mindfulness and isn’t obtained by wrong mindfulness.
+{: #p24}
 
-“How does the path come from wisdom and isn’t obtained from foolishness? A monk cultivates wisdom. He contemplates the law of arising and passing away and attains the noble wisdom and insight that accords with this knowledge. He discerns and comprehends it in order to correctly end suffering. This is how the path comes from wisdom and isn’t obtained from foolishness.
+25\. “How does the path come from a concentrated mind and isn’t obtained by a distracted mind? A monk parts with desire and parts with bad and unwholesome things *up to* attains the accomplishment of the fourth meditation. This is how the path comes from a concentrated mind and isn’t obtained by a distracted mind.
+{: #p25}
 
-“How does the path come from non-frivolity, enjoying non-frivolity, and practicing non-frivolity and isn’t obtained by frivolity, enjoying frivolity, or practicing frivolity? A monk’s mind always ceases frivolity, happily dwells, and [enters] Nirvāṇa without remainder. His mind forever lives happily, rejoices, and is mentally freed. This is how the path comes from non-frivolity, enjoying non-frivolity, and practicing non-frivolity and isn’t obtained by frivolity, enjoying frivolity, or practicing frivolity.
+26\. “How does the path come from wisdom and isn’t obtained from foolishness? A monk cultivates wisdom. He contemplates the law of arising and passing away and attains the noble wisdom and insight that accords with this knowledge. He discerns and comprehends it in order to correctly end suffering. This is how the path comes from wisdom and isn’t obtained from foolishness.
+{: #p26}
+
+27\. “How does the path come from non-frivolity, enjoying non-frivolity, and practicing non-frivolity and isn’t obtained by frivolity, enjoying frivolity, or practicing frivolity? A monk’s mind always ceases frivolity, happily dwells, and [enters] nirvāṇa without remainder. His mind forever lives happily, rejoices, and is mentally freed. This is how the path comes from non-frivolity, enjoying non-frivolity, and practicing non-frivolity and isn’t obtained by frivolity, enjoying frivolity, or practicing frivolity.
+{: #p27}
 
 #### Aniruddha
 
-“Monks, the monk Aniruddha has accomplished these eight thoughts of a great man, and afterwards he’ll spend a summer retreat in Cedi at Waterside Grove. With this teaching of mine, he lives alone in seclusion, his mind without carelessness, and cultivates diligence. After living there alone in seclusion, his mind being without carelessness, and cultivating diligence, he made himself a son of the clan. He shaved off his beard and hair, put on  reddish-brown robes, became faithful, left home, went homeless, and trained on the path.
+28\. “Monks, the monk Aniruddha has accomplished these eight thoughts of a great man, and afterwards he’ll spend a summer retreat in Cedi at Waterside Grove. With this teaching of mine, he lives alone in seclusion, his mind without carelessness, and cultivates diligence. After living there alone in seclusion, his mind being without carelessness, and cultivating diligence, he made himself a son of the clan. He shaved off his beard and hair, put on  reddish-brown robes, became faithful, left home, went homeless, and trained on the path.
+{: #p28}
 
-“Only when the unsurpassed religious practice is finished will he know and recognize for himself in the present life the accomplishment of self-realization: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished.’ He will no longer be subject to existence and know it as it really is.”
+29\. “Only when the unsurpassed religious practice is finished will he know and recognize for himself in the present life the accomplishment of self-realization: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished.’ He will no longer be subject to existence and know it as it really is.”
+{: #p29}
 
-At this moment, Venerable Aniruddha became an arhat. His mind rightly liberated, he became an elder and honored one. It was then that he spoke these verses,
+30\. At this moment, Venerable Aniruddha became an arhat. His mind rightly liberated, he became an elder and honored one. It was then that he spoke these verses,
+{: #p30}
 
-* {:.verse} “Knowing my thoughts of reflection from afar,  
+* {:.verse #v1} “Knowing my thoughts of reflection from afar,  
   The unsurpassed world’s teacher  
   With right body and mind entered concentration  
   And came here instantly by levitation.
-* {:.verse} What had been thought in my mind  
+* {:.verse #v2} What had been thought in my mind  
   He stated and added another to it:  
   The buddhas’ enjoyment of non-frivolity  
   And seclusion from all frivolity.
-* {:.verse} Once I knew the Dharma that came from him,  
+* {:.verse #v3} Once I knew the Dharma that came from him,  
   I happily lived in the right Dharma,  
   Achieved penetration of concentration,  
   And accomplished the task of the Buddha’s Dharma.
-* {:.verse} I was not delighted by death  
+* {:.verse #v4} I was not delighted by death  
   Nor did I wish to be born;  
   When I followed it, I was capable of advancing,  
   Established in right mindfulness and right knowledge.
-* {:.verse} At [Vyālī] Bamboo Grove,  
+* {:.verse #v5} At [Vyālī] Bamboo Grove,  
   My life will reach its end there.  
   It’ll be under the bamboo trees,  
-  That Parinirvāṇa without remainder.”
+  That parinirvāṇa without remainder.”
 
-The Buddha thus spoke. Venerable Aniruddha and the monks who heard what the Buddha taught rejoiced and handed it down.
+31\. The Buddha thus spoke. Venerable Aniruddha and the monks who heard what the Buddha taught rejoiced and handed it down.
+{: #p31}
 
 ---
 
