--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_075.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_075.md
@@ -4,6 +4,7 @@ title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 75. The Pure Way to
 type: kramdown
 base: ../../../
 previous: MA_074.html
+next: MA_076.html
 ---
 
 # [The Medium Discourses](../../index.html)
@@ -11,90 +12,90 @@ previous: MA_074.html
 ### 75. The Pure Way to the Imperturbable
 
 1\. Thus have I heard:  One time, the Buddha traveled to Kuru and stayed at the Kuru town of [Karmasādharma].
-{:#MA75-1}
+{:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “Desires are impermanent, fake, and false. These falsehoods then are illusory, deceptive, and foolish. Whether it’s desires in the present life, desires in the afterlife, forms in the present life, or forms in the afterlife, they are all the domain of Māra. They are Māra’s bait. As a result of them, the mind is affected by measureless bad and wholesome things, such as longing, anger, and fighting, which become obstacles when the noble disciple trains.
-{:#MA75-2}
+{:#p2}
 
 3\. “The learned noble disciple will perform this contemplation about what the Bhagavān has taught: ‘Desires are impermanent, fake, and false. These falsehoods then are illusory, deceptive, and foolish. Whether it’s desires in the present life, desires in the afterlife, forms in the present life, or forms in the afterlife, they are all the domain of Māra. They are Māra’s bait. As a result of them, the mind is affected by measureless bad and wholesome things, such as longing, anger, and fighting, which become obstacles when the noble disciple trains.’
-{:#MA75-3}
+{:#p3}
 
 4\. “He thinks, ‘I could accomplish a great mental state by shutting out the world and collecting my mind. If I attain the accomplishment of a great mental state by shutting out the worldly and collecting my mind, such a mental state won’t readily produce the measureless bad and unwholesome things such as longing, anger, and fighting, which become obstacles when the noble disciple trains.’
-{:#MA75-4}
+{:#p4}
 
 5\. “With that practice and that training, he thus cultivates and expands [his mind], readily attaining mental purity in that abode. Attaining mental purity in that abode, the monk might attain entry into the imperturbable right there, or wisdom may be his release. Later, when his body breaks up and his life ends, he’ll surely arrive at the imperturbable as a result of that previous mentality. This is the first description of the pure way to the imperturbable.
-{:#MA75-5}
+{:#p5}
 
 6\. “Furthermore, the learned noble disciple performs this contemplation: ‘Whatever has form, all the four elements, and what’s made of the four elements, those four elements are impermanent things. They are painful and ceasing.’ Thus practicing and thus training, he cultivates and expands, readily attaining mental purity in that abode. After attaining mental purity in that abode, the monk might attain entry to the imperturbable right there, or wisdom may be his release. Later, when his body breaks up and his life ends, he’ll surely arrive at the imperturbable as a result of that previous mentality. This is the second description of the pure way to the imperturbable.
-{:#MA75-6}
+{:#p6}
 
 7\. “Furthermore, the learned noble disciple performs this contemplation: ‘Whether it’s desires in the present life, desires in the afterlife, forms in present life, forms in the afterlife, perceptions of desire in the present life, or perceptions of desire in the afterlife, all those perceptions are impermanent things. They are painful and ceasing.’ At that point, he’ll surely attain a perception of the imperturbable. Thus practicing and thus training, he thus cultivates and expands [his mind], readily attaining mental purity in that abode. After attaining mental purity in that abode, the monk might attain entry into the imperturbable right there, or wisdom may be his release. Later, when his body breaks up and his life ends, he’ll surely arrive at the imperturbable as a result of that previous mentality. This is the third description of the pure way to the imperturbable.
-{:#MA75-7}
+{:#p7}
 
 8\. “Furthermore, the learned noble disciple performs this contemplation: ‘Whether it’s perceptions of desire in the present life, perceptions of desire in the afterlife, perceptions of form in the present life, or perceptions of form in the afterlife, all those perceptions are impermanent things. They are painful and ceasing.’ At that point, he’ll attain a perception of the abode of nothingness. Thus practicing and thus training, he thus cultivates and expands [his mind], readily attaining mental purity in that abode. After attaining mental purity in that abode, the monk might attain entry into the imperturbable right there, or wisdom may be his release. Later, when his body breaks up and his life ends, he’ll surely arrive at the imperturbable as a result of that previous mentality. This is the first description of the pure way to the abode of nothingness.
-{:#MA75-8}
+{:#p8}
 
 9\. “Furthermore, the learned noble disciple performs this contemplation: ‘This world is empty, empty of spirit and what belongs to spirit, empty of the permanent, empty of the eternal, empty of the enduring, and empty of the unchanging.’ Thus practicing and thus training, he thus cultivates and expands [his mind], readily attaining mental purity in that abode. After attaining mental purity in that abode, the monk might attain entry into the abode of nothingness right there, or wisdom may be his release. Later, when his body breaks up and his life ends, he’ll surely arrive at the abode of nothingness as a result of that previous mentality. This is the second description of the pure way to the abode of nothingness.
-{:#MA75-9}
+{:#p9}
 
 10\. “Furthermore, the learned noble disciple performs this contemplation: ‘I’m not subject to others or anything belonging to them, nor are they subject to me or anything belonging to me.’ Thus practicing and thus training, he thus cultivates and expands [his mind], readily attaining mental purity in that abode. After attaining mental purity in that abode, the monk might attain entry into the abode of nothingness right there, or wisdom may be his release. Later, when his body breaks up and his life ends, he’ll surely arrive at the abode of nothingness as a result of that previous mentality. This is the third description of the pure way to the abode of nothingness.
-{:#MA75-10}
+{:#p10}
 
 11\. “Furthermore, the learned noble disciple performs this contemplation: ‘Whether it’s desires in the present life, desires in the afterlife, forms in the present life, forms in the afterlife, perceptions of desire in the present life, perceptions of desire in the afterlife, perceptions of form in the present life, perceptions of form in the afterlife, perceptions of the imperturbable, or perceptions of the abode of nothingness, all those perceptions are impermanent things. They are painful and ceasing.’ At that point, he’ll attain the absence of perceptions. Thus practicing and thus training, he thus cultivates and expands [his mind], readily attaining mental purity in that abode. After attaining mental purity in that abode, the monk might attain entry into the absence of perceptions right there, or wisdom may be his release. Later, when his body breaks up and his life ends, he’ll surely arrive at the abode without perceptions as a result of that previous mentality. This is the description of the pure way to the absence of perceptions.”
-{:#MA75-11}
+{:#p11}
 
-12\. At the time, Venerable Ānanda was holding a fan and attending to the Buddha. He saluted the Buddha with his hands together and said, “Bhagavān, suppose there’s a monk who thus practices: ‘There’s no “I” or “mine;” “I” won’t exist, and “mine” won’t exist.’ What has existed in the past, he readily ends it and attains equanimity. Bhagavān, will a monk who practices thus reach his end and attain Parinirvāṇa?”
-{:#MA75-12}
+12\. At the time, Venerable Ānanda was holding a fan and attending to the Buddha. He saluted the Buddha with his hands together and said, “Bhagavān, suppose there’s a monk who thus practices: ‘There’s no “I” or “mine;” “I” won’t exist, and “mine” won’t exist.’ What has existed in the past, he readily ends it and attains equanimity. Bhagavān, will a monk who practices thus reach his end and attain parinirvāṇa?”
+{:#p12}
 
 The Bhagavān told him, “Ānanda, this is not something that’s certain. He might have that attainment, or he might not.”
 
-13\. Venerable Ānanda said, “Bhagavān, how does a monk practice who won’t attain Parinirvāṇa?”
-{:#MA75-13}
+13\. Venerable Ānanda said, “Bhagavān, how does a monk practice who won’t attain parinirvāṇa?”
+{:#p13}
 
-The Bhagavān told him, “Ānanda, suppose a monk thus practices, ‘There’s no “I” and no “mine;” “I” won’t exist, and “mine” won’t exist.’ Whatever has existed in the past, he readily ends it and attain equanimity. Ānanda, suppose a monk enjoys that equanimity, attaches to that equanimity, and abides in that equanimity. Ānanda, a monk who practices thus surely won’t attain Parinirvāṇa.”
+The Bhagavān told him, “Ānanda, suppose a monk thus practices, ‘There’s no “I” and no “mine;” “I” won’t exist, and “mine” won’t exist.’ Whatever has existed in the past, he readily ends it and attain equanimity. Ānanda, suppose a monk enjoys that equanimity, attaches to that equanimity, and abides in that equanimity. Ānanda, a monk who practices thus surely won’t attain parinirvāṇa.”
 
-14\. Venerable Ānanda said, “Bhagavān, if a monk has something he accepts, he won’t attain Parinirvāṇa?”
-{:#MA75-14}
+14\. Venerable Ānanda said, “Bhagavān, if a monk has something he accepts, he won’t attain parinirvāṇa?”
+{:#p14}
 
-The Bhagavān told him, “Ānanda, if a monk has something he accepts, he surely won’t attain Parinirvāṇa.”
+The Bhagavān told him, “Ānanda, if a monk has something he accepts, he surely won’t attain parinirvāṇa.”
 
 15\. Venerable Ānanda said, “Bhagavān, but what does  that monk accept?”
-{:#MA75-15}
+{:#p15}
 
 The Bhagavān told him, “Ānanda, there’s something remaining in his practice, which is the abode with perceptions and without perceptions, which is the best among existences. That monk will experience it.”
 
 16\. Venerable Ānanda said, “Bhagavān, that monk will undertake another practice?”
-{:#MA75-16}
+{:#p16}
 
 The Bhagavān told him, “So it is, Ānanda. That monk will undertake another practice.”
 
-17\. Venerable Ānanda said, “Bhagavān, what does a monk practice to surely attain Parinirvāṇa?”
-{:#MA75-17}
+17\. Venerable Ānanda said, “Bhagavān, what does a monk practice to surely attain parinirvāṇa?”
+{:#p17}
 
-The Bhagavān told him, “Ānanda, if a monk thus practices, ‘There’s no “I” and no “mine.” “I” will not exist, and “mine” will not exist.’ Whatever has existed in the past, he'll readily end it and attain equanimity. Ānanda, suppose that monk doesn’t enjoy equanimity, doesn’t attach to equanimity, and doesn’t abide in equanimity. Ānanda, practicing thus, that monk will surely attain Parinirvāṇa.”
+The Bhagavān told him, “Ānanda, if a monk thus practices, ‘There’s no “I” and no “mine.” “I” will not exist, and “mine” will not exist.’ Whatever has existed in the past, he'll readily end it and attain equanimity. Ānanda, suppose that monk doesn’t enjoy equanimity, doesn’t attach to equanimity, and doesn’t abide in equanimity. Ānanda, practicing thus, that monk will surely attain parinirvāṇa.”
 
-18\. Venerable Ānanda said, “Bhagavān, if a monk accepts nothing, will he surely attain Parinirvāṇa?”
-{:#MA75-18}
+18\. Venerable Ānanda said, “Bhagavān, if a monk accepts nothing, will he surely attain parinirvāṇa?”
+{:#p18}
 
-The Bhagavān told him, “Ānanda, if a monk accepts nothing, he’ll surely attain Parinirvāṇa.”
+The Bhagavān told him, “Ānanda, if a monk accepts nothing, he’ll surely attain parinirvāṇa.”
 
-19\. It was then that Venerable Ānanda saluted the Bhagavān with his palms together and said, “The Bhagavān has described the pure way to the imperturbable. He has described the pure way to the abode of nothingness. He has described the pure way to no perceptions. He has described the remainderless Nirvāṇa. Bhagavān, what is the noble liberation?”
-{:#MA75-19}
+19\. It was then that Venerable Ānanda saluted the Bhagavān with his palms together and said, “The Bhagavān has described the pure way to the imperturbable. He has described the pure way to the abode of nothingness. He has described the pure way to no perceptions. He has described the remainderless nirvāṇa. Bhagavān, what is the noble liberation?”
+{:#p19}
 
 20\. The Bhagavān told him, “Ānanda, the learned noble disciple performs this contemplation: ‘Whether it’s desires in the present life, desires in the afterlife, forms in the present life, forms in the afterlife, perceptions of desire in the present life, perceptions of desire in the afterlife, perceptions of form in the present life, perceptions of form in the afterlife, perceptions of the imperturbable, perceptions of the abode of nothingness, or perceptions of no perception, all those perceptions are impermanent things. They are painful and ceasing.’ This is said to be self-existence. If a self exists, this is birth, old age, illness, and death.
-{:#MA75-20}
+{:#p20}
 
-21\. “Ānanda, suppose he has this teaching, ‘Everything ends and ceases without remainder and never again exists. It then has no birth and no old age, illness, or death.’ The nobles thus contemplate. If he has that, it’s surely the teaching of liberation. Whether it’s Nirvāṇa with or without a remainder, it’s called immortality.
-{:#MA75-21}
+21\. “Ānanda, suppose he has this teaching, ‘Everything ends and ceases without remainder and never again exists. It then has no birth and no old age, illness, or death.’ The nobles thus contemplate. If he has that, it’s surely the teaching of liberation. Whether it’s nirvāṇa with or without a remainder, it’s called immortality.
+{:#p21}
 
 22\. “Thus contemplating and thus seeing, he’ll surely attain mental liberation from the contaminants of desire and the mental liberation from the contaminants of existence and contaminants of ignorance. After being liberated, he readily knows that he is liberated: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished.’ He is no longer subject to existence and knows it as it really is.
-{:#MA75-22}
+{:#p22}
 
-23\. “Ānanda, I’ve now described for you the pure way to the imperturbable, described the pure way to the abode of nothingness, described the pure way of no perceptions, described the remainderless Nirvāṇa, and described the noble liberation. As an honored teacher produces great sympathy, protective mindfulness, and pity, seeks meaning and benefit, and seeks well-being and happiness for his disciples, I’ve now done that. You should go on to do this yourselves. Go somewhere without [worldly] affairs and sit under a tree in a grove or in an empty and peaceful dwelling. Sitting in reflection, don’t become careless, but diligently apply effort. Don’t let yourself regret it later. This is my instruction; this is my admonition.”
-{:#MA75-23}
+23\. “Ānanda, I’ve now described for you the pure way to the imperturbable, described the pure way to the abode of nothingness, described the pure way of no perceptions, described the remainderless nirvāṇa, and described the noble liberation. As an honored teacher produces great sympathy, protective mindfulness, and pity, seeks meaning and benefit, and seeks well-being and happiness for his disciples, I’ve now done that. You should go on to do this yourselves. Go somewhere without [worldly] affairs and sit under a tree in a grove or in an empty and peaceful dwelling. Sitting in reflection, don’t become careless, but diligently apply effort. Don’t let yourself regret it later. This is my instruction; this is my admonition.”
+{:#p23}
 
 24\. The Buddha thus spoke. Venerable Ānanda and the monks who heard what the Buddha taught rejoiced and handed it down.
-{:#MA75-24}
+{:#p24}
 
 ---
 
